--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="M:/Mijn Documenten/Dev/Unif/OGP/Project/libs/AnnotationsDoclets.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Robbe/Documents/AnnotationsDoclets.jar/AnnotationsDoclets.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://www.cs.kuleuven.be/books/OOPWithJava/doc/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
